blue/bsp/src/bindings.rs

#[test]
fn bindgen_test_layout_rt_thread() {
    const UNINIT: ::core::mem::MaybeUninit<rt_thread> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_thread>(),
        144usize,
        concat!("Size of: ", stringify!(rt_thread))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_thread>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_thread))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tlist) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(tlist)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stat) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(stat)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).priority) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).stack) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(stack)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).cleanup) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(cleanup)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).tid) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(tid)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).thread_timer) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(thread_timer)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).spinlock) as usize - ptr as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(spinlock)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(error)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).time_slice) as usize - ptr as usize },
        116usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(time_slice)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mutex_info) as usize - ptr as usize },
        124usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(mutex_info)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).event_info) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_thread),
            "::",
            stringify!(event_info)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_mutex {
    #[doc = " Inherit from KObjectBase"]
    pub parent: rt_object,
    #[doc = " Priority ceiling of mutex"]
    pub ceiling_priority: rt_uint8_t,
    #[doc = " Maximal priority for pending thread"]
    pub priority: rt_uint8_t,
    #[doc = " Current owner of mutex"]
    pub owner: *mut rt_thread,
    #[doc = " The object list taken by thread"]
    pub taken_node: rt_list_t,
    #[doc = " SysQueue for mutex"]
    pub inner_queue: SysQueue,
}
#[test]
fn bindgen_test_layout_rt_mutex() {
    const UNINIT: ::core::mem::MaybeUninit<rt_mutex> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_mutex>(),
        112usize,
        concat!("Size of: ", stringify!(rt_mutex))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_mutex>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_mutex))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ceiling_priority) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(ceiling_priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).priority) as usize - ptr as usize },
        21usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(priority)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).taken_node) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(taken_node)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).inner_queue) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mutex),
            "::",
            stringify!(inner_queue)
        )
    );
}
#[doc = " RwLock Raw Structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_rwlock {
    pub parent: rt_object,
    #[doc = " Mutex that inner used for rwlock"]
    pub mutex: rt_mutex,
    #[doc = " Condition var for reader notification"]
    pub read_cond: rt_condvar,
    #[doc = " Condition var for writer notification"]
    pub write_cond: rt_condvar,
    #[doc = " Lock flag, which indicates >0 for readers occupied count, -1 for writer occupy"]
    pub rw_count: rt_int32_t,
    #[doc = " Readers wait for this condition var"]
    pub reader_waiting: rt_uint32_t,
    #[doc = " Writers ait for this condition var"]
    pub writer_waiting: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_rt_rwlock() {
    const UNINIT: ::core::mem::MaybeUninit<rt_rwlock> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_rwlock>(),
        384usize,
        concat!("Size of: ", stringify!(rt_rwlock))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_rwlock>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_rwlock))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mutex) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(mutex)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).read_cond) as usize - ptr as usize },
        132usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(read_cond)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).write_cond) as usize - ptr as usize },
        252usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(write_cond)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).rw_count) as usize - ptr as usize },
        372usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(rw_count)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).reader_waiting) as usize - ptr as usize },
        376usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(reader_waiting)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).writer_waiting) as usize - ptr as usize },
        380usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_rwlock),
            "::",
            stringify!(writer_waiting)
        )
    );
}
#[doc = " Mailbox raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_mailbox {
    #[doc = " Inherit from KObjectBase"]
    pub parent: rt_object,
    #[doc = " SysQueue for mailbox"]
    pub inner_queue: SysQueue,
}
#[test]
fn bindgen_test_layout_rt_mailbox() {
    const UNINIT: ::core::mem::MaybeUninit<rt_mailbox> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_mailbox>(),
        96usize,
        concat!("Size of: ", stringify!(rt_mailbox))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_mailbox>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_mailbox))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).inner_queue) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_mailbox),
            "::",
            stringify!(inner_queue)
        )
    );
}
#[doc = " MessageQueue raw structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_messagequeue {
    #[doc = " Inherit from KObjectBase"]
    pub parent: rt_object,
    #[doc = " SysQueue for mailbox"]
    pub inner_queue: SysQueue,
}
